# robotsix_px4_simulation

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: docker.yml
config/dds_topics/: default.yaml
config/px4_parameters/: 6661_quad_gps  6662_quad_mocap
docker/: Dockerfile  Dockerfile.base  dds_topics.yaml  entrypoint.sh
env_hooks/: gz_sim.sh.in
include/robotsix_px4_sim_interface/: simulation_server.hpp
launch/: simulation_processes.launch.py  simulation_processes_mavlink.launch.py  simulation_server.launch.py
models/common/: quadrotor_base.xacro
models/quad_gps/: model.config  model.sdf.xacro
models/quad_mocap/: model.config  model.sdf.xacro
robotsix_px4_simulation/: __init__.py  simulation_server.py
scripts/: clone_PX4.sh
src/: simulation_server.cpp
worlds/: default.sdf
